2005-09-08  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* fink.in: Add --exclude-trees option, short form -T. Also put --trees
	into include_trees.

2005-09-02  Daniel Macks  <dmacks@netspace.org>

	fink.8.in: Documente cleanup --buildlocks

2005-08-31  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* fink.in: Add new global --trees option. Still needs doc.

2005-08-30  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* fink.conf.5.in: Document Bzip2path

2005-08-24  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* fink.info.in:  Use Conflicts/Replaces against gcc3.1 so that the 
	Fink gcc3.1 package is removed (in favor of an Apple-supplied 
	gcc 3.1, represented by a virtual package).

2005-08-18  Daniel Macks  <dmacks@netspace.org>

	* fink.8.in: Document new cleanup syntax.

2005-08-09  Daniel Macks  <dmacks@netspace.org>

	* fink.8.in: Document --maintainermode; remove warning from
	--build-as-nobody.

2005-08-05  Daniel Macks  <dmacks@netspace.org>

	* Makefile: t/testmore.pl now returns true on success

2005-08-04  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* bootstrap.pl: When selecting the basepath:
		- Don't make /sw the default if we'll refuse it later (but warn users
		that we're giving them a non-standard default.)
		- Tell users that if they're not in /sw, they won't get the bindist.
		- If we refuse a basepath, ask for a new one instead of dying.

2005-08-02  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* fink.conf.5.in: Document new Buildpath on Tiger.

2005-07-27  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Makefile: Document 'make clean'

2005-07-27  Max Horn <max@quendi.de>

	* NEWS: Removed NEWS file since (sadly) nobody ever updates it anyway.s

2005-07-15  Daniel Macks  <dmacks@netspace.org>

	* Makefile: Add a "clean" target: recursively find .cvsignore
	files and remove files that are matched by them

2005-07-11  Dave Vasilevsky  <vasi@users.sourceforge.net>
