@@ -42,6 +42,9 @@ sed "s|@PREFIX@|$basepath|g" <pathsetup.sh.in >pathsetup.sh
 echo "Creating FinkVersion.pm..."
 sed -e "s|@VERSION@|$version|g" -e "s|@BASEPATH@|$basepath|g" <perlmod/Fink/FinkVersion.pm.in >perlmod/Fink/FinkVersion.pm
 
+echo "Creating Fink.pm..."
+sed -e "s|@BASEPATH@|$basepath|g" <perlmod/Fink.pm.in >perlmod/Fink.pm
+
 echo "Creating man page..."
 sed "s|@VERSION@|$version|g ; s|@PREFIX@|$basepath|g" <fink.8.in >fink.8
 sed "s|@PREFIX@|$basepath|g" <fink.conf.5.in >fink.conf.5
